--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
 APScheduler==3.6.3
 backports.zoneinfo==0.2.1
+black==21.10b0
 cachetools==4.2.2
 certifi==2021.10.8
 charset-normalizer==2.0.7
+click==8.0.3
 idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.4.0
+pprintpp==0.4.0
 python-telegram-bot==13.8.1
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
+regex==2021.11.10
 requests==2.26.0
 simplejson==3.17.5
 six==1.16.0
+tomli==1.2.2
 tornado==6.1
+typing_extensions==4.0.0
 tzdata==2021.5
 tzlocal==4.1
 urllib3==1.26.7
+Werkzeug==2.0.2
